--- a/index.html
+++ b/index.html
@@ -202,17 +202,17 @@
         <div class = "footer">
             <div class="social-media">
                 <!-- instagram -->
-                <a class="link" href="https://www.instagram.com/lets__code/" target="_blank" rel="noopener noreferrer"><img
+                <a class="link" href="" target="_blank" rel="noopener noreferrer"><img
                         class="social-icon" src="assets/images/instagram.svg" alt="instagram" /></a>
                 <!-- linkedin -->
-                <a class="link" href="https://www.linkedin.com/in/avinash-singh-071b79175/" target="_blank"
+                <a class="link" href="" target="_blank"
                     rel="noopener noreferrer"><img class="social-icon" src="assets/images/linkedin.svg"
                         alt="linkedin" /></a>
                 <!-- gmail -->
-                <a class="link" href="mailto: avinash201199@gmail.com" target="_blank" rel="noopener noreferrer"><img
+                <a class="link" href="mailto: harsha.uppara224@gmail.com" target="_blank" rel="noopener noreferrer"><img
                         class="social-icon" src="assets/images/gmail.svg" alt="gmail" /></a>
                 <!-- github -->
-                <a class="link" href="https://github.com/avinash201199" target="_blank" rel="noopener noreferrer"><img
+                <a class="link" href="https://github.com/harsha0-2" target="_blank" rel="noopener noreferrer"><img
                         class="social-icon" src="assets/images/github.svg" alt="Github" /></a>
 
             </div>
